# Game_Ogre3D

./: CMakeLists.txt  resources.cfg
include/: GunBrosApp.h
src/: main.cpp  plugins.cfg  resources.cfg
